[package]
name       = "tendermint-config"
version    = "0.24.0-pre.2" # Also update `html_root_url` in lib.rs and
                               # depending crates (rpc, light-node, ..) when bumping this
license    = "Apache-2.0"
homepage   = "https://www.tendermint.com/"
repository = "https://github.com/informalsystems/tendermint-rs/tree/master/tendermint"
readme     = "../README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
edition    = "2018"

description = """
    tendermint-config provides functions for loading and validating Tendermint
    configuration files. It is moved out of the tendermint crate for no_std support
    in the tendermint crate.
    """

authors = [
    "Informal Systems <hello@informal.systems>",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tendermint = { version = "0.24.0-pre.2", path = "../tendermint" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5" 
url = "2.2"
displaydoc = "0.2.3" 

[dev-dependencies]
pretty_assertions = "1.3.0"
